fix: increase padding-top in descriptionWrapper for improved spacing

--- a/src/styles/titleCard.module.css
+++ b/src/styles/titleCard.module.css
@@ -47,7 +47,7 @@
     align-content: center;
     height: 100%;
     flex: 1 1 auto;
-    padding-top: 10px;
+    padding-top: 20px;
     margin-left: 25px;
     margin-right: -5px;
 }
